--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<div id="react-root"></div>
-	<script src="./dist/example.js"></script>
+	<script src="dist/example.js"></script>
 </body>
 </html>
